--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>common-api</module>
+        <module>service-provider</module>
     </modules>
 
     <properties>
@@ -43,11 +44,6 @@
                 <artifactId>h2</artifactId>
                 <version>${h2.version}</version>
                 <scope>runtime</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.mybatis.spring.boot</groupId>
-                <artifactId>mybatis-spring-boot-starter</artifactId>
-                <version>1.3.2</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
