--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>service-provider</module>
         <module>service-client</module>
         <module>book-provider</module>
+        <module>user-provider</module>
     </modules>
 
     <properties>
