--- a/user-provider/src/main/resources/application.yml
+++ b/user-provider/src/main/resources/application.yml
@@ -1,2 +1,8 @@
 server:
   port: 8004
+
+spring:
+  cache:
+    cache-names: getTime,currentTimeMillis
+    caffeine:
+      spec: maximumSize=50,expireAfterAccess=600s
