--- a/admin/pom.xml
+++ b/admin/pom.xml
@@ -32,5 +32,13 @@
             <artifactId>spring-boot-admin-server-ui</artifactId>
             <version>${spring-admin.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
     </dependencies>
 </project>
