--- a/book-provider/src/main/resources/application.yml
+++ b/book-provider/src/main/resources/application.yml
@@ -23,4 +23,30 @@ spring:
       name: admin
       password: admin123
 
-management.security.enabled: true
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health, info
+  info.env.enabled: true
+  security.enabled: true
+
+eureka:
+  client:
+    register-with-eureka: true  #註冊到Eureka註冊中心
+    fetch-registry: true  #開啟檢索服務
+    service-url:
+      #若要註冊到多台 Eureka Server，可用逗號區隔
+      defaultZone: http://localhost:8761/eureka/
+  instance:
+    instance-id: micros-book-provider #status的默認名稱修改
+    prefer-ip-address: true #訪問路徑可以顯示IP地址
+
+info: #Eureka中針對本服務端的信息描述
+  app:
+    name: svc-book
+  company:
+    name: www.euphy.com
+  build:
+    artifactId: ${project.artifactId}
+    version: ${project.version}
