--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>book-provider</module>
         <module>user-provider</module>
         <module>admin</module>
+        <module>eureka-server</module>
     </modules>
 
     <properties>
@@ -22,13 +23,12 @@
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <h2.version>2.2.224</h2.version>
-        <spring-cloud.version>2023.0.0</spring-cloud.version>
+        <spring-cloud.version>2024.0.0</spring-cloud.version>
         <spring-boot.version>3.4.0</spring-boot.version>
         <spring-admin.version>3.4.0</spring-admin.version>
     </properties>
 
     <dependencyManagement>
-
         <dependencies>
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
