--- a/pom.xml
+++ b/pom.xml
@@ -18,13 +18,18 @@
         <module>eureka-server</module>
     </modules>
 
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>3.4.0</version>
+    </parent>
+
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <h2.version>2.2.224</h2.version>
         <spring-cloud.version>2024.0.0</spring-cloud.version>
-        <spring-boot.version>3.4.0</spring-boot.version>
         <spring-admin.version>3.4.0</spring-admin.version>
     </properties>
 
@@ -38,13 +43,6 @@
                 <scope>import</scope>
             </dependency>
             <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-dependencies</artifactId>
-                <version>${spring-boot.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-            <dependency>
                 <groupId>com.h2database</groupId>
                 <artifactId>h2</artifactId>
                 <version>${h2.version}</version>
@@ -52,6 +50,7 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+
     <build>
         <finalName>spring-cloud-micros</finalName>
         <resources>
@@ -67,6 +66,5 @@
             </plugin>
         </plugins>
     </build>
-
 
 </project>
