--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>user-provider</module>
         <module>admin</module>
         <module>eureka-server</module>
+        <module>config-server</module>
     </modules>
 
     <parent>
