--- a/user-provider/pom.xml
+++ b/user-provider/pom.xml
@@ -15,6 +15,7 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <springdoc-openai-webflux-ui-version>2.7.0</springdoc-openai-webflux-ui-version>
     </properties>
 
     <dependencies>
@@ -54,6 +55,12 @@
             <groupId>com.github.ben-manes.caffeine</groupId>
             <artifactId>caffeine</artifactId>
         </dependency>
+        <!-- Config Support -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
+        </dependency>
+
         <!-- DevTools for Development -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -63,8 +70,8 @@
 
         <dependency>
             <groupId>org.springdoc</groupId>
-            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-            <version>2.6.0</version>
+            <artifactId>springdoc-openapi-starter-webflux-ui</artifactId>
+            <version>${springdoc-openai-webflux-ui-version}</version>
         </dependency>
 
         <dependency>
