feat: enable refresh config & discovery services

--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -10,4 +10,4 @@ spring:
     config:
       server:
         native:
-          searchLocations: classpath:./config-repo
+          searchLocations: # your local path
